add base template

--- a/src/css/ui/0_variable.styl
+++ b/src/css/ui/0_variable.styl
@@ -5,6 +5,18 @@ $header-color = #222
 $blockquote-color = #999
 $small-color = #888
 
+// 各项主色调
+$section-count = 7
+$section-colors = {
+  overview:  #9FC1E3
+  admission: #E3B48D
+  education: #E1A6E3
+  research:  #F8DA89
+  activity:  #C9D36F
+  news:      #DEA1A1
+  notice:    #A4CBCC
+}
+
 // 字体等
 $primary-font-family = "PingFang SC", "Lantinghei SC", "Microsoft Yahei", "Hiragino Sans GB", "Microsoft Sans Serif", "WenQuanYi Micro Hei", "sans"
 $primary-font-family-webfont = "Open Sans", $primary-font-family
