responsive sidenav and format content

--- a/src/css/modules/content.styl
+++ b/src/css/modules/content.styl
@@ -3,3 +3,11 @@
     col(1/4)
   .main-content
     col(3/4)
+
++below(780px)
+  .content-has-sidenav
+    .main-content
+      stack()
+
+.main-content .node
+  margin: 30px 0
