--- a/src/css/ui/0_variable.styl
+++ b/src/css/ui/0_variable.styl
@@ -1,7 +1,7 @@
 // 链接颜色、文字颜色等
 $primary-color = #53A0D4
-$text-color = #444
-$header-color = #222
+$text-color = #555
+$header-color = #3D3D3D
 $blockquote-color = #999
 $small-color = #888
 
@@ -19,7 +19,7 @@ $section-colors = {
 }
 
 // 字体等
-$primary-font-family = "PingFang SC", "Lantinghei SC", "Microsoft Yahei", "Hiragino Sans GB", "Microsoft Sans Serif", "WenQuanYi Micro Hei", "sans"
+$primary-font-family = "PingFang SC", "Hiragino Sans GB", "Lantinghei SC", "Microsoft Yahei", "Microsoft Sans Serif", "WenQuanYi Micro Hei", "sans"
 $primary-font-family-webfont = "Open Sans", $primary-font-family
-$header-font-family = "PingFang SC", "Verdana", "Helvetica Neue", "Microsoft Yahei", "Hiragino Sans GB", "Microsoft Sans Serif", "WenQuanYi Micro Hei", "sans-serif"
+$header-font-family = "PingFang SC", "Lucida Grande", "Segoe UI", "Verdana", "Lantinghei SC", "Microsoft Yahei", "Hiragino Sans GB", "Microsoft Sans Serif", "WenQuanYi Micro Hei", "sans-serif"
 $header-font-family-webfont = "Open Sans", $header-font-family
