--- a/src/css/modules/footer.styl
+++ b/src/css/modules/footer.styl
@@ -109,3 +109,18 @@ for $section-name, $section-color in $section-colors
   
   .footer__navi__section__item
     margin-left: 0
+
+// sticky footer
+html, body
+  height: 100%
+
+body
+  display: table
+  width: 100%
+
+.page-row
+  display: table-row
+  height: 1px
+
+.page-row-expanded
+  height: auto
