inner-page navigation

--- a/src/css/modules/footer.styl
+++ b/src/css/modules/footer.styl
@@ -96,7 +96,7 @@ $footer-text-link = mix(#FFF, $footer-bgcolor, 70%)
   line-height: 30px
 
 for $section-name, $section-color in $section-colors
-  .footer__navi__section__{$section-name} .footer__navi__section__title
+  .footer__navi__section--{$section-name} .footer__navi__section__title
     border-color: $section-color
 
 // 一栏显示时，左侧 ribbon 显示到上侧
