--- a/src/css/modules/header.styl
+++ b/src/css/modules/header.styl
@@ -32,6 +32,9 @@ for $section-name in $section-colors
   display: inline-block
   max-width: 80%
 
+.header__nav
+  margin-top: 15px
+
 +below(rupture.desktop-cutoff)
   // 非桌面时，header 高度与宽度成比例
   .header
