--- a/src/css/ui/0_variable.styl
+++ b/src/css/ui/0_variable.styl
@@ -8,7 +8,7 @@ $small-color = #888
 // 各项主色调
 $section-count = 7
 $section-colors = {
-  default:   #53A0D4
+  default:   #53A0D4    // not a real section
   overview:  #9FC1E3
   admission: #E3B48D
   education: #E1A6E3
