--- a/src/css/modules/sidenav.styl
+++ b/src/css/modules/sidenav.styl
@@ -36,6 +36,8 @@ $sidenav-bgcolor = #3D3D3D
   border-left: 5px solid $sidenav-bgcolor
   color: #FFF
   transition: background-color .2s ease-in-out, border-color .2s ease-in-out
+  &:hover
+    transition: none
   &:hover, &:active, &:visited
     color: #FFF
     text-decoration: none
