--- a/src/css/ui/1_typography.styl
+++ b/src/css/ui/1_typography.styl
@@ -14,7 +14,6 @@ body, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset,
   margin: 0
   padding: 0
 
-
 /* 重设 HTML5 标签, IE 需要在 js 中 createElement(TAG) */
 article, aside, details, figcaption, figure, footer, header, menu, nav, section
   display: block
@@ -61,12 +60,6 @@ blockquote
   margin: 1em 3em 1em 0
 
 
-@media only screen and ( max-width: 640px )
-  blockquote
-    margin: 1em 0
-  
-
-
 /* Firefox 以外，元素没有下划线，需添加 */
 acronym, abbr
   border-bottom: 1px dotted
@@ -83,7 +76,7 @@ del
   text-decoration: line-through
 
 
-address, caption, cite, dfn, em, th, var
+address, caption, cite, th, var
   font-style: normal
   font-weight: 400
 
@@ -130,14 +123,13 @@ a:hover
   text-decoration: underline
 
 
-.typo a
-  border-bottom: 1px solid $primary-color
-
-
-.typo a:hover
-  border-bottom-color: $text-color
-  color: $text-color
-  text-decoration: none
+.typo, .cke_editable
+  a
+    border-bottom: 1px solid $primary-color
+    &:hover
+      border-bottom-color: $text-color
+      color: $text-color
+      text-decoration: none
 
 
 /* 默认不显示下划线，保持页面简洁 */
@@ -213,6 +205,7 @@ figcaption
 
 /* 保证块/段落之间的空白隔行 */
 .typo p, .typo pre, .typo li, .typo ul, .typo ol, .typo dl, .typo form, .typo hr, .typo table,
+.cke_editable p, .cke_editable pre, .cke_editable li, .cke_editable ul, .cke_editable ol, .cke_editable dl, .cke_editable form, .cke_editable hr, .cke_editable table,
 .typo-p, .typo-pre, .typo-li, .typo-ul, .typo-ol, .typo-dl, .typo-form, .typo-hr, .typo-table, blockquote
   margin-bottom: 1.2em
 
@@ -223,8 +216,9 @@ h1, h2, h3, h4, h5, h6
   color: $header-color
   line-height: 1.35
 
-.typo h2, .typo h3
-  color: #717171  
+.typo, .cke_editable
+  h2, h3
+    color: #717171
 
 .wf-active
   h1, h2, h3, h4, h5, h6
@@ -232,79 +226,104 @@ h1, h2, h3, h4, h5, h6
 
 /* 标题应该更贴紧内容，并与其他块区分，margin 值要相应做优化 */
 .typo h1, .typo h2, .typo h3, .typo h4, .typo h5, .typo h6,
+.cke_editable h1, .cke_editable h2, .cke_editable h3, .cke_editable h4, .cke_editable h5, .cke_editable h6,
 .typo-h1, .typo-h2, .typo-h3, .typo-h4, .typo-h5, .typo-h6
   margin-top: 1.2em
   margin-bottom: 0.6em
   line-height: 1.35
 
 
-.typo h1, .typo-h1
+.typo h1,
+.cke_editable h1,
+.typo-h1
   font-size: 2.2em
 
 
-.typo h2, .typo-h2
+.typo h2,
+.cke_editable h2,
+.typo-h2
   font-size: 1.8em
 
 
-.typo h3, .typo-h3
+.typo h3,
+.cke_editable h3,
+.typo-h3
   font-size: 1.6em
 
 
-.typo h4, .typo-h4
+.typo h4,
+.cke_editable h4,
+.typo-h4
   font-size: 1.4em
 
 
-.typo h5, .typo h6, .typo-h5, .typo-h6
+.typo h5, .typo h6,
+.cke_editable h5, .cke_editable h6,
+.typo-h5, .typo-h6
   font-size: 1.2em
 
 
 /* 在文章中，应该还原 ul 和 ol 的样式 */
-.typo ul, .typo-ul
+.typo ul,
+.cke_editable ul,
+.typo-ul
   margin-left: 1.3em
   list-style: square
 
 
-.typo ol, .typo-ol
+.typo ol,
+.cke_editable ol,
+.typo-ol
   list-style: decimal
   margin-left: 1.9em
 
 
-.typo li ul, .typo li ol, .typo-ul ul, .typo-ul ol, .typo-ol ul, .typo-ol ol
+.typo li ul, .typo li ol,
+.cke_editable li ul, .cke_editable li ol,
+.typo-ul ul, .typo-ul ol, .typo-ol ul, .typo-ol ol
   margin-bottom: 0.8em
   margin-left: 2em
 
 
-.typo li ul, .typo-ul ul, .typo-ol ul
+.typo li ul,
+.cke_editable li ul,
+.typo-ul ul, .typo-ol ul
   list-style: circle
 
 
 /* 同 ul/ol，在文章中应用 table 基本格式 */
-.typo table th, .typo table td, .typo-table th, .typo-table td, .typo table caption
+.typo table th, .typo table td, .typo table caption,
+.cke_editable table th, .cke_editable table td, .cke_editable table caption,
+.typo-table th, .typo-table td
   border: 1px solid #ddd
   padding: 0.5em 1em
   color: #666
 
-.typo table th, .typo-table th
+.typo table th,
+.cke_editable table th,
+.typo-table th
   background: #fbfbfb
 
 
-.typo table thead th, .typo-table thead th
+.typo table thead th,
+.cke_editable table thead th,
+.typo-table thead th
   background: #f1f1f1
 
 
-.typo table caption
+.typo table caption,
+.cke_editable table caption
   border-bottom: none
 
 
 // 人员列表定制样式
-.typo .table--peoplelist
-  width: 100%
-  max-width: 500px
-  
-  th, td
-    border: 0
-    padding-left: 0
-    font-size: 0.9em
+.typo, .cke_editable
+  .table--peoplelist
+    width: 100%
+    max-width: 500px
+    th, td
+      border: 0
+      padding-left: 0
 
 /* 去除 webkit 中 input 和 textarea 的默认样式  */
 .typo-input, .typo-textarea
@@ -313,6 +332,38 @@ h1, h2, h3, h4, h5, h6
 
 
 /* Responsive images */
-.typo img
+.typo img,
+.cke_editable img
   max-width: 100%
 
+
+/* CKEditor defined styles */
+.rteindent1
+  margin-left: 40px
+
+.rteindent2
+  margin-left: 80px
+
+.rteindent3
+  margin-left: 120px
+
+.rteindent4
+  margin-left: 160px
+
+.rteleft
+  text-align: left
+
+.rteright
+  text-align: right
+
+.rtecenter
+  text-align: center
+
+.rtejustify
+  text-align: justify
+
+.ibimage_left
+  float: left
+
+.ibimage_right
+  float: right
