--- a/src/css/modules/2_content.styl
+++ b/src/css/modules/2_content.styl
@@ -11,3 +11,15 @@
 
 .main-content
   margin-bottom: 50px
+
+.breadcrumb-container
+  font-size: 14px
+  color: #888
+
+.breadcrumb__item, .breadcrumb__item:visited, .breadcrumb__item:active
+  color: #AAA
+  text-decoration: none
+
+.breadcrumb__item--link:hover
+  color: #444
+  text-decoration: underline
