--- a/src/css/ui/2_webicon.styl
+++ b/src/css/ui/2_webicon.styl
@@ -2,11 +2,11 @@
   
 @font-face {
   font-family: 'sseicon';
-  src:url('../fonts/sseicon.eot?-vd1wd4');
-  src:url('../fonts/sseicon.eot?#iefix-vd1wd4') format('embedded-opentype'),
-    url('../fonts/sseicon.ttf?-vd1wd4') format('truetype'),
-    url('../fonts/sseicon.woff?-vd1wd4') format('woff'),
-    url('../fonts/sseicon.svg?-vd1wd4#sseicon') format('svg');
+  src:url('../fonts/sseicon.eot?-gx6qhi');
+  src:url('../fonts/sseicon.eot?#iefix-gx6qhi') format('embedded-opentype'),
+    url('../fonts/sseicon.ttf?-gx6qhi') format('truetype'),
+    url('../fonts/sseicon.woff?-gx6qhi') format('woff'),
+    url('../fonts/sseicon.svg?-gx6qhi#sseicon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -25,6 +25,15 @@ i {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-link:before {
+  content: "\e601";
+}
+.icon-message:before {
+  content: "\e600";
+}
+.icon-phone:before {
+  content: "\e057";
+}
 .icon-attach_file:before {
   content: "\e0c0";
 }
@@ -45,12 +54,6 @@ i {
 }
 .icon-search:before {
   content: "\e2ca";
-}
-.icon-link:before {
-  content: "\e9cb";
-}
-.icon-new-tab:before {
-  content: "\ea7e";
 }
 
 
