--- a/src/css/modules/0_body_ribbon.styl
+++ b/src/css/modules/0_body_ribbon.styl
@@ -1,3 +1,3 @@
 for $section-name, $section-color in $section-colors
-  .body-section-{$section-name}
+  .body-section-{$section-name} .body__ribbon
     border-top: 5px solid $section-color
