--- a/src/css/ui/4_sse-slider.styl
+++ b/src/css/ui/4_sse-slider.styl
@@ -1,126 +1,104 @@
-@import 'spinner.css'
+$slider-width  = 1250px
+$slider-height = 350px
+$slider-bottom-height = 25px
+$fade-in-out-interval = 0.4s
 
-$slider-width  = 1250px;
-$slider-height = 350px;
-$slider-bottom-height = 25px;
-$fade-in-out-interval = 0.4s;
+.spinner
+  margin: 0 auto
+  width: 20px
+  height: 20px
+  position: relative
 
-.spinner {
-  margin: 0 auto;
-  width: 20px;
-  height: 20px;
-  position: relative;
-}
 
-.container1 > div, .container2 > div, .container3 > div {
-  width: 6px;
-  height: 6px;
-  background-color: #333;
+.container1 > div, .container2 > div, .container3 > div
+  width: 6px
+  height: 6px
+  background-color: #333
 
-  border-radius: 100%;
-  position: absolute;
-  -webkit-animation: bouncedelay 1.2s infinite ease-in-out;
-  animation: bouncedelay 1.2s infinite ease-in-out;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-}
+  border-radius: 100%
+  position: absolute
+  animation: bouncedelay 1.2s infinite ease-in-out
+  animation-fill-mode: both
 
-.spinner .spinner-container {
-  position: absolute;
-  top: 165px;
-  width: 100%;
-  height: 100%;
-}
 
-.container2 {
-  -webkit-transform: rotateZ(45deg);
-  transform: rotateZ(45deg);
-}
+.spinner .spinner-container
+  position: absolute
+  top: 165px
+  width: 100%
+  height: 100%
 
-.container3 {
-  -webkit-transform: rotateZ(90deg);
-  transform: rotateZ(90deg);
-}
 
-.circle1 { top: 0; left: 0; }
-.circle2 { top: 0; right: 0; }
-.circle3 { right: 0; bottom: 0; }
-.circle4 { left: 0; bottom: 0; }
+.container2
+  transform: rotateZ(45deg)
 
-.container2 .circle1 {
-  -webkit-animation-delay: -1.1s;
-  animation-delay: -1.1s;
-}
 
-.container3 .circle1 {
-  -webkit-animation-delay: -1.0s;
-  animation-delay: -1.0s;
-}
+.container3
+  transform: rotateZ(90deg)
 
-.container1 .circle2 {
-  -webkit-animation-delay: -0.9s;
-  animation-delay: -0.9s;
-}
 
-.container2 .circle2 {
-  -webkit-animation-delay: -0.8s;
-  animation-delay: -0.8s;
-}
+.circle1
+  top: 0
+  left: 0 
+.circle2
+  top: 0
+  right: 0 
+.circle3
+  right: 0
+  bottom: 0 
+.circle4
+  left: 0
+  bottom: 0 
 
-.container3 .circle2 {
-  -webkit-animation-delay: -0.7s;
-  animation-delay: -0.7s;
-}
+.container2 .circle1
+  animation-delay: -1.1s
 
-.container1 .circle3 {
-  -webkit-animation-delay: -0.6s;
-  animation-delay: -0.6s;
-}
 
-.container2 .circle3 {
-  -webkit-animation-delay: -0.5s;
-  animation-delay: -0.5s;
-}
+.container3 .circle1
+  animation-delay: -1.0s
 
-.container3 .circle3 {
-  -webkit-animation-delay: -0.4s;
-  animation-delay: -0.4s;
-}
 
-.container1 .circle4 {
-  -webkit-animation-delay: -0.3s;
-  animation-delay: -0.3s;
-}
+.container1 .circle2
+  animation-delay: -0.9s
 
-.container2 .circle4 {
-  -webkit-animation-delay: -0.2s;
-  animation-delay: -0.2s;
-}
 
-.container3 .circle4 {
-  -webkit-animation-delay: -0.1s;
-  animation-delay: -0.1s;
-}
+.container2 .circle2
+  animation-delay: -0.8s
 
-@-webkit-keyframes bouncedelay {
-  0%, 80%, 100% { -webkit-transform: scale(0.0) }
-  40% { -webkit-transform: scale(1.0) }
-}
 
-@keyframes bouncedelay {
-  0%, 80%, 100% {
-    transform: scale(0.0);
-    -webkit-transform: scale(0.0);
-  }
-  40% {
+.container3 .circle2
+  animation-delay: -0.7s
+
+
+.container1 .circle3
+  animation-delay: -0.6s
+
+
+.container2 .circle3
+  animation-delay: -0.5s
+
+
+.container3 .circle3
+  animation-delay: -0.4s
+
+
+.container1 .circle4
+  animation-delay: -0.3s
+
+
+.container2 .circle4
+  animation-delay: -0.2s
+
+
+.container3 .circle4
+  animation-delay: -0.1s
+
+@keyframes bouncedelay
+  0%, 80%, 100%
+    transform: scale(0.0)
+  
+  40%
     transform: scale(1.0)
-    -webkit-transform: scale(1.0)
-  }
-}
 
-html, body {
-
-}
 
 .sse-slider
   display block
