--- a/src/css/modules/2_content.styl
+++ b/src/css/modules/2_content.styl
@@ -31,6 +31,7 @@
 .breadcrumb-container
   font-size: 14px
   color: #888
+  margin-top: 20px
 
 .breadcrumb__item, .breadcrumb__item:visited, .breadcrumb__item:active
   color: #AAA
