--- a/src/css/ui/1_typography.styl
+++ b/src/css/ui/1_typography.styl
@@ -230,6 +230,8 @@ for $section-name, $section-color in $section-colors
     .typo
       h2
         color: darken($section-color, 30%)
+        a, a:visited, a:hover
+          color: darken($section-color, 30%)
       a
         color: $text-color
         border-bottom-color: @color
