--- a/src/css/ui/0_variable.styl
+++ b/src/css/ui/0_variable.styl
@@ -33,7 +33,7 @@ $section-colors = {
   education: #E1A6E3
   research:  #F8DA89
   activity:  #C9D36F
-  news:      #DEA1A1
+  news:      #E38484
   notice:    #A4CBCC
 }
 
