small improvements of news

--- a/src/css/page/news.styl
+++ b/src/css/page/news.styl
@@ -43,6 +43,10 @@ $news-navigation-border-color-hover = #CCC
     border-bottom-color: transparent
     text-decoration: none
   
+  a:hover
+    color: darken($section-colors['news'], 20%)
+    border-color: @color
+  
 .news-list__body
   color: #888
   font-size: 14px
