--- a/src/css/ui/2_webicon.styl
+++ b/src/css/ui/2_webicon.styl
@@ -25,14 +25,32 @@ i {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-wechat:before {
+  content: "\e600";
+}
+.icon-qq:before {
+  content: "\e602";
+}
 .icon-link:before {
   content: "\e601";
 }
-.icon-message:before {
-  content: "\e600";
-}
 .icon-phone:before {
   content: "\e057";
+}
+.icon-arrow_forward:before {
+  content: "\e204";
+}
+.icon-check:before {
+  content: "\e206";
+}
+.icon-close:before {
+  content: "\e209";
+}
+.icon-refresh:before {
+  content: "\e211";
+}
+.icon-schedule:before {
+  content: "\e2c9";
 }
 .icon-attach_file:before {
   content: "\e0c0";
@@ -55,6 +73,5 @@ i {
 .icon-search:before {
   content: "\e2ca";
 }
-
 
 }
