--- a/src/css/modules/2_content.styl
+++ b/src/css/modules/2_content.styl
@@ -22,6 +22,11 @@
     .intro__right
       col(2/6)
 
++below(780px)
+  .intro-layout--two-col
+    .intro__left, .intro__right
+      stack()
+
 .main-content
   margin-bottom: 50px
 
