--- a/src/css/modules/2_rightbar.styl
+++ b/src/css/modules/2_rightbar.styl
@@ -7,9 +7,9 @@
   margin-bottom: 20px
   color: #9D9D9D
 
-.relative-link__item
+.typo .relative-link__item
   margin: 10px 0
-  color: #888888 !important
+  color: #888888
   white-space: nowrap
   overflow: hidden
   text-overflow: ellipsis
@@ -18,9 +18,10 @@
     color: #C9C9C9
     margin-right: 10px
   
-  a, a:visited, a:hover
-    color: #888888 !important
-    border: 0 !important
+  a, a:visited, a:active
+    color: #888888
+    border-bottom: 0
   
   a:hover
-    text-decoration: underline !important
+    color: #888888
+    border-bottom: 1px solid #888888
