--- a/src/css/ui/0_variable.styl
+++ b/src/css/ui/0_variable.styl
@@ -27,14 +27,14 @@ $small-color = #888
 // 各项主色调
 $section-count = 7
 $section-colors = {
-  default:   #53A0D4    // not a real section
-  overview:  #9FC1E3
-  admission: #E3B48D
-  education: #E1A6E3
-  research:  #F8DA89
-  activity:  #C9D36F
-  news:      #E38484
-  notice:    #A4CBCC
+  default:   #58c3f0
+  overview:  #d47385
+  admission: #fed17b
+  education: #aed580
+  research:  #f89e68
+  activity:  #80acdc
+  news:      #e86e6e
+  notice:    #6dc9c3
 }
 
 // 字体等
