--- a/src/css/modules/2_pagination.styl
+++ b/src/css/modules/2_pagination.styl
@@ -31,7 +31,7 @@ $pagination-border-color-hover = #CCC
   .pager-current
     padding: 5px 10px
 
-for $section-name, $section-color in $section-colors
+for $section-name, $section-color in $section-text-colors
   // 鼠标移入项
   .body-section-{$section-name} .typo .pager .pager-current
     color: $section-color
