--- a/src/css/page/news.styl
+++ b/src/css/page/news.styl
@@ -24,7 +24,7 @@
 
 .news-list__day
   font-size: 36px
-  color: $section-colors['news']
+  color: $section-text-colors['news']
 
 .news-list__year-month
   font-size: 14px
@@ -41,7 +41,7 @@
     text-decoration: none
   
   a:hover
-    color: darken($section-colors['news'], 20%)
+    color: $section-text-colors['news']
     border-color: @color
   
 .news-list__body
