--- a/src/css/ui/0_variable.styl
+++ b/src/css/ui/0_variable.styl
@@ -36,6 +36,16 @@ $section-colors = {
   news:      #e86e6e
   notice:    #6dc9c3
 }
+$section-text-colors = {
+  default:   darken($section-colors['default'],   30%)
+  overview:  darken($section-colors['overview'],  0%)
+  admission: darken($section-colors['admission'], 34%)
+  education: darken($section-colors['education'], 20%)
+  research:  darken($section-colors['research'],  30%)
+  activity:  darken($section-colors['activity'],  10%)
+  news:      darken($section-colors['news'],      5%)
+  notice:    darken($section-colors['notice'],    15%)
+}
 
 // 字体等
 $primary-font-family = "PingFang SC", "Hiragino Sans GB", "Lantinghei SC", "Microsoft Yahei", "Microsoft Sans Serif", "WenQuanYi Micro Hei", "sans"
