--- a/src/css/ui/2_webicon.styl
+++ b/src/css/ui/2_webicon.styl
@@ -25,11 +25,17 @@ i {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-wechat:before {
-  content: "\e600";
+.icon-arrows-alt:before {
+  content: "\f0b2";
+}
+.icon-circle:before {
+  content: "\f111";
 }
 .icon-qq:before {
-  content: "\e602";
+  content: "\f1d6";
+}
+.icon-wechat:before {
+  content: "\f1d7";
 }
 .icon-link:before {
   content: "\e601";
