--- a/src/css/modules/2_index_slider.styl
+++ b/src/css/modules/2_index_slider.styl
@@ -1,285 +1,142 @@
-.spinner {
-  margin: 0 auto;
-  width: 20px;
-  height: 20px;
-  position: relative;
-}
-.container1 > div,
-.container2 > div,
-.container3 > div {
-  width: 6px;
-  height: 6px;
-  background-color: #333;
-  border-radius: 100%;
-  position: absolute;
-  -webkit-animation: bouncedelay 1.2s infinite ease-in-out;
-  animation: bouncedelay 1.2s infinite ease-in-out;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-}
-.spinner .spinner-container {
-  position: absolute;
-  top: 165px;
-  width: 100%;
-  height: 100%;
-}
-.container2 {
-  -webkit-transform: rotateZ(45deg);
-  transform: rotateZ(45deg);
-}
-.container3 {
-  -webkit-transform: rotateZ(90deg);
-  transform: rotateZ(90deg);
-}
-.circle1 {
-  top: 0;
-  left: 0;
-}
-.circle2 {
-  top: 0;
-  right: 0;
-}
-.circle3 {
-  right: 0;
-  bottom: 0;
-}
-.circle4 {
-  left: 0;
-  bottom: 0;
-}
-.container2 .circle1 {
-  -webkit-animation-delay: -1.1s;
-  animation-delay: -1.1s;
-}
-.container3 .circle1 {
-  -webkit-animation-delay: -1s;
-  animation-delay: -1s;
-}
-.container1 .circle2 {
-  -webkit-animation-delay: -0.9s;
-  animation-delay: -0.9s;
-}
-.container2 .circle2 {
-  -webkit-animation-delay: -0.8s;
-  animation-delay: -0.8s;
-}
-.container3 .circle2 {
-  -webkit-animation-delay: -0.7s;
-  animation-delay: -0.7s;
-}
-.container1 .circle3 {
-  -webkit-animation-delay: -0.6s;
-  animation-delay: -0.6s;
-}
-.container2 .circle3 {
-  -webkit-animation-delay: -0.5s;
-  animation-delay: -0.5s;
-}
-.container3 .circle3 {
-  -webkit-animation-delay: -0.4s;
-  animation-delay: -0.4s;
-}
-.container1 .circle4 {
-  -webkit-animation-delay: -0.3s;
-  animation-delay: -0.3s;
-}
-.container2 .circle4 {
-  -webkit-animation-delay: -0.2s;
-  animation-delay: -0.2s;
-}
-.container3 .circle4 {
-  -webkit-animation-delay: -0.1s;
-  animation-delay: -0.1s;
-}
-@-webkit-keyframes bouncedelay {
-  0%, 80%, 100% {
-    -webkit-transform: scale(0);
-  }
-  40% {
-    -webkit-transform: scale(1);
-  }
-}
-html,
-body {
-  margin: 0;
-}
-.sse-slider {
-  display: block;
-  position: relative;
-  margin: 0 auto;
-  width: 100%;
-  min-height: 920px;
-  overflow: hidden;
-}
-.sse-slider--hidden {
-  display: none;
-}
-.sse-slider--indicator {
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  text-align: center;
-  font-size: 2em;
-  margin: auto;
-  z-index: 9996;
-  width: 100%;
-  height: 100%;
-  background: #ddd;
-}
-.sse-slider ul {
-  list-style: none;
-  margin: 0 auto;
-  padding: 0;
-}
-.slide {
-  z-index: 9997;
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  transition: all ease-in 0.4s;
-  background-size: cover;
-  background-position: center;
-}
-.sse-slider .is-show {
-  opacity: 1 !important;
-}
-.sse-slider .is-loading,
-.sse-slider--control-prev,
-.sse-slider--control-next {
-  display: inline-block;
-  position: absolute;
-  top: 0;
-  height: 100%;
-}
-.sse-slider--control-prev button,
-.sse-slider--control-next button {
-  width: 85px;
-  height: 100%;
-  border: none;
-  color: #fff;
-  outline: 0;
-  font-size: 2em;
-  line-height: 100%;
-  text-align: center;
-  background: none;
-  cursor: pointer;
-  opacity: 0;
-  transition: opacity linear 0.2s;
-}
-.sse-slider--control-prev button:hover,
-.sse-slider--control-next button:hover {
-  opacity: 1;
-}
-.sse-slider--control-prev {
-  z-index: 9999;
-  left: 0;
-}
-.sse-slider--control-next {
-  z-index: 9998;
-  right: 0;
-}
-.sse-slider--round-ctrl {
-  display: block;
-  position: absolute;
-  right: 20px;
-  bottom: 6%;
-  z-index: 10000;
-  width: 20%;
-  height: 25px;
-  margin: 0 auto;
-  text-align: center;
-}
-.sse-slider--round-ctrl button,
-.round-ctrl-arrow {
-  border: none;
-  background: none;
-  color: #fff;
-  padding: 0 8px;
-  cursor: pointer;
-  outline: none;
-  height: 45px;
-  line-height: 45px !important;
-}
-.sse-slider--round-ctrl button i,
-.round-ctrl-arrow i {
-  height: 45px;
-  line-height: 45px !important;
-}
-.sse-slider--activated {
-  color: #1e90ff !important;
-  padding-top: 5px;
-  font-size: 1.1em;
-  line-height: 45px;
-}
-.slide-content {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 16%;
-  background: rgba(0,0,0,0.7);
-  z-index: 10000;
-  padding-left: 100px;
-  opacity: 0;
-}
-.slide-content h2 {
-  color: #1e90ff !important;
-  font-size: 1.5em;
-}
-.slide-content h2 a {
-  text-decoration: none;
-  color: #1e90ff !important;
-}
-.slide-content p {
-  color: #fff;
-  max-width: 600px;
-  font-size: 1.25em;
-}
-.round-ctrl-arrow {
-  color: #fff;
-}
-@-moz-keyframes bouncedelay {
-  0%, 80%, 100% {
-    transform: scale(0);
-    -webkit-transform: scale(0);
-  }
-  40% {
-    transform: scale(1);
-    -webkit-transform: scale(1);
-  }
-}
-@-webkit-keyframes bouncedelay {
-  0%, 80%, 100% {
-    transform: scale(0);
-    -webkit-transform: scale(0);
-  }
-  40% {
-    transform: scale(1);
-    -webkit-transform: scale(1);
-  }
-}
-@-o-keyframes bouncedelay {
-  0%, 80%, 100% {
-    transform: scale(0);
-    -webkit-transform: scale(0);
-  }
-  40% {
-    transform: scale(1);
-    -webkit-transform: scale(1);
-  }
-}
-@keyframes bouncedelay {
-  0%, 80%, 100% {
-    transform: scale(0);
-    -webkit-transform: scale(0);
-  }
-  40% {
-    transform: scale(1);
-    -webkit-transform: scale(1);
-  }
-}
+$slider-desc-height = 150px
+$title-color = lighten($primary-color, 10%)
+
+.index--slider--data
+  display: none
+
+.index__slider__spinner
+  position: absolute
+  top: 0
+  left: 0
+  z-index: 100
+  width: 100%
+  bottom: $slider-desc-height
+  background: rgba(#000, 0.4)
+  visibility: hidden
+  opacity: 0
+  transition: visibility 0s linear 0.2s, opacity 0.2s linear
+
+.index__slider__spinner--show
+  visibility: visible
+  opacity: 1
+  transition-delay: 0s
+
+.index__slider__spinner .sk-cube-grid
+  position: absolute
+  left: 50%
+  top: 50%
+  width: 50px
+  height: 50px
+  margin-top: -25px
+  margin-left: -25px
+
+.index__slider
+  position: relative
+
+.index__slider__stage
+  position: absolute
+  left: 0
+  top: 0
+  width: 100%
+  height: 100%
+
+.index__slider__image-area
+  position: absolute
+  left: 0
+  top: 0
+  width: 100%
+  height: 100%
+  z-index: 40
+
+.index__slider__desc
+  position: absolute
+  bottom: 0
+  left: 0
+  width: 100%
+  z-index: 50
+  height: $slider-desc-height
+  background: rgba(#000, 0.8)
+
+  & > .content-container
+    position: relative
+    height: $slider-desc-height
+
+.index__slider__content-area
+  position: absolute
+  left: 0
+  top: 0
+  right: 200px
+  height: 100%
+
+.index__slider__control-area
+  position: absolute
+  right: 0
+  height: 50px
+  margin-top: -25px
+  top: 50%
+  width: 200px
+  text-align: right
+
+.index__slider__control-item
+  user-select: none
+  color: #fff
+  padding: 0 6px
+  cursor: pointer
+  line-height: 50px
+
+.index__slider__circle--activated
+  color: $title-color
+
+.index__slider__item
+  position: absolute
+  left: 0
+  top: 0
+  width: 100%
+  height: 100%
+  opacity: 0
+  transition: opacity .5s linear
+
+.index__slider__item--shown
+  opacity: 1
+
+.index__slider__image
+  background-size: cover
+  background-position: center center
+
+.index__slider__text
+  padding-top: 30px
+  color: #FFF
+  h2
+    color: $title-color
+    margin-bottom: 10px
+
+.index__slider__move
+  position: absolute
+  width: 85px
+  height: 100%
+  outline: 0
+  cursor: pointer
+  opacity: 0
+  z-index: 120
+  text-align: center
+  transition: opacity linear 0.2s
+  background: rgba(#000, 0.3)
+
+.index__slider__move:hover
+  opacity: 1
+
+.index__slider__move.index__slider__role-prev
+  left: 0
+
+.index__slider__move.index__slider__role-next
+  right: 0
+
+.index__slider__move > i
+  color: #fff
+  position: absolute
+  line-height: 30px
+  font-size: 30px
+  top: 50%
+  left: 50%
+  margin-top: -15px
+  margin-left: -15px
