--- a/src/css/ui/2_webicon.styl
+++ b/src/css/ui/2_webicon.styl
@@ -25,6 +25,12 @@ i {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-chevron-left:before {
+  content: "\f053";
+}
+.icon-chevron-right:before {
+  content: "\f054";
+}
 .icon-arrows-alt:before {
   content: "\f0b2";
 }
