do not switch to 'first' slide when there are no slides

--- a/src/css/modules/2_index_slider.styl
+++ b/src/css/modules/2_index_slider.styl
@@ -39,6 +39,7 @@ $title-color = lighten($primary-color, 10%)
   top: 0
   width: 100%
   height: 100%
+  background: #444
 
 .index__slider__image-area
   position: absolute
