--- a/src/css/ui/0_variable.styl
+++ b/src/css/ui/0_variable.styl
@@ -30,6 +30,7 @@ $section-colors = {
   default:   #58c3f0
   overview:  #d47385
   admission: #fed17b
+  programme: #fed17b
   education: #aed580
   research:  #f89e68
   activity:  #80acdc
@@ -40,6 +41,7 @@ $section-text-colors = {
   default:   darken($section-colors['default'],   30%)
   overview:  darken($section-colors['overview'],  0%)
   admission: darken($section-colors['admission'], 34%)
+  programme: darken($section-colors['programme'], 34%)
   education: darken($section-colors['education'], 20%)
   research:  darken($section-colors['research'],  30%)
   activity:  darken($section-colors['activity'],  10%)
