add more icons and fix responsive layout

--- a/src/css/modules/0_container.styl
+++ b/src/css/modules/0_container.styl
@@ -1,7 +1,10 @@
 .content-container
   center(100%)
   margin: 0 20px
-  +desktop()
-    center(rupture.desktop-cutoff - 50px)
-  +above(1250px)
++above(1000px)
+  .content-container
+    margin: 0
+    center(980px)
++above(1250px)
+  .content-container
     center(1200px)
