--- a/src/css/modules/0_header.styl
+++ b/src/css/modules/0_header.styl
@@ -31,7 +31,7 @@ for $section-name in $section-colors
 .header__nav
   margin-top: 15px
 
-+below(rupture.desktop-cutoff)
++below(1000px)
   .header__logo
     display: inline-block
     max-width: 80%
