--- a/src/css/ui/2_webicon.styl
+++ b/src/css/ui/2_webicon.styl
@@ -31,17 +31,32 @@ i {
 .icon-chevron-right:before {
   content: "\f054";
 }
+.icon-facebook:before {
+  content: "\f09a";
+}
 .icon-arrows-alt:before {
   content: "\f0b2";
 }
 .icon-circle:before {
   content: "\f111";
 }
+.icon-git:before {
+  content: "\f1d3";
+}
 .icon-qq:before {
   content: "\f1d6";
 }
 .icon-wechat:before {
   content: "\f1d7";
+}
+.icon-chrome:before {
+  content: "\f268";
+}
+.icon-firefox:before {
+  content: "\f269";
+}
+.icon-internet-explorer:before {
+  content: "\f26b";
 }
 .icon-link:before {
   content: "\e601";
@@ -61,8 +76,20 @@ i {
 .icon-refresh:before {
   content: "\e211";
 }
+.icon-notifications:before {
+  content: "\e24a";
+}
+.icon-share:before {
+  content: "\e25a";
+}
+.icon-star:before {
+  content: "\e260";
+}
 .icon-schedule:before {
   content: "\e2c9";
+}
+.icon-turned_in:before {
+  content: "\e2f8";
 }
 .icon-attach_file:before {
   content: "\e0c0";
