change title style in wide page

--- a/src/css/modules/0_header.styl
+++ b/src/css/modules/0_header.styl
@@ -17,9 +17,9 @@ body.admin-menu.adminimal-menu:before
   z-index: 0
   background: url(../img/logo-bg.png) repeat-x
 
-.header .content-container
+.header > .content-container
   position: relative
-  z-index: 1
+  z-index: 100
 
 for $section-name in $section-colors
   .body-section-{$section-name} .header
