--- a/src/css/page/index_slider.styl
+++ b/src/css/page/index_slider.styl
@@ -37,7 +37,11 @@ $title-color = lighten($primary-color, 10%)
   margin-left: -25px
 
 .index__slider
-  position: relative
+  position: absolute
+  left: 0
+  top: 0
+  width: 100%
+  height: 100%
 
 .index__slider__stage
   position: absolute
