--- a/src/css/modules/0_header.styl
+++ b/src/css/modules/0_header.styl
@@ -7,6 +7,7 @@ body.admin-menu.adminimal-menu:before
   position: relative
   background-repeat: no-repeat
   background-position: center bottom
+  background-size: cover
 
 .header__background
   position: absolute
