--- a/src/css/modules/2_content.styl
+++ b/src/css/modules/2_content.styl
@@ -67,6 +67,8 @@ for $section-name, $section-color in $section-colors
 .title-section--box
   .page__title
     margin-top: 20px
+    margin-bottom: 0.6em
+    line-height: 1.35
 
   .breadcrumb-container
     margin-top: 20px
