--- a/src/css/page/news.styl
+++ b/src/css/page/news.styl
@@ -11,7 +11,13 @@
 
   h4
     margin-top: 0
-  
+
++below(1000px)
+  .news-list__col
+    float: none
+    display: block
+    width: auto
+
 .news-list__col-inner
   padding-right: 20px
 
