--- a/src/css/page/index_slider.styl
+++ b/src/css/page/index_slider.styl
@@ -27,7 +27,7 @@ $title-color = lighten($primary-color, 10%)
   opacity: 1
   transition-delay: 0s
 
-.index__slider__spinner .sk-cube-grid
+.index__slider__spinner .sk-folding-cube
   position: absolute
   left: 50%
   top: 50%
