--- a/src/css/modules/2_rightbar.styl
+++ b/src/css/modules/2_rightbar.styl
@@ -1,6 +1,7 @@
 .rightbar__module
   background: #F8F8F8
   padding: 25px
+  padding-bottom: 15px
   margin-bottom: 30px
 
 .rightbar__module > h3
@@ -9,15 +10,21 @@
   color: #9D9D9D
 
 .typo .relative-link__item
-  margin: 10px 0
+  margin: 15px 0
   color: #888888
-  white-space: nowrap
-  overflow: hidden
-  text-overflow: ellipsis
+  word-break: break-all
+  position: relative
+  padding-left: 26px
+  font-size: 14px
+  line-height: 26px
   
   i
+    position: absolute
     color: #C9C9C9
-    margin-right: 10px
+    font-size: 16px
+    line-height: 26px
+    left: 0
+    top: 0
   
   a, a:visited, a:active
     color: #888888
