--- a/src/css/ui/0_variable.styl
+++ b/src/css/ui/0_variable.styl
@@ -49,6 +49,12 @@ $section-text-colors = {
   notice:    darken($section-colors['notice'],    15%)
 }
 
+// 通知分类颜色
+$notice-tag-colors = {
+  notice_category: #f2a45c
+  notice_target: #46b879
+}
+
 // 字体等
 $primary-font-family = "PingFang SC", "Hiragino Sans GB", "Lantinghei SC", "Microsoft Yahei", "Microsoft Sans Serif", "WenQuanYi Micro Hei", "sans"
 $primary-font-family-webfont = "Open Sans", $primary-font-family
