migrate sse to sse_theme

--- a/src/css/modules/2_rightbar.styl
+++ b/src/css/modules/2_rightbar.styl
@@ -4,7 +4,7 @@
   padding-bottom: 15px
   margin-bottom: 30px
 
-.rightbar__module > h3
+.rightbar__module h3
   margin-top: 0
   margin-bottom: 20px
   color: #9D9D9D
