--- a/src/css/page/notice.styl
+++ b/src/css/page/notice.styl
@@ -116,6 +116,9 @@
       &:hover
         background: lighten($tag-color, 20%)
 
+.notice-filter__block
+  margin-bottom: 20px
+
 @media screen and (min-width:1001px)
   .notice-filter__item .notice-filter__filters
     float right
